# graph-on-databricks

./: .gitignore  CLAUDE.md  README.md  graph-rag.md
.github/workflows/: deploy-finance-genie-slides.yml
agentic-commerce/: README.md  notes.md  pyproject.toml
agentic-commerce/docs/: lakehouse.md  runbook.md  supervisor.md
agentic-commerce/retail_agent/scripts/: setup_databricks_secrets.sh
aircraft-graphrag/: .env.sample  README.md  data_utils.py
aircraft-graphrag/data/: MAINTENANCE_A320.md  MAINTENANCE_B737.md  nodes_removals.csv  rels_aircraft_removal.csv  rels_component_removal.csv  rels_event_aircraft.csv  rels_event_system.csv
aircraft-graphrag/notebooks/: 01_etl_to_neo4j.ipynb  02_gds_louvain_maintenance.ipynb  03_data_and_embeddings.ipynb  04_graphrag_retrievers.ipynb  05_hybrid_retrievers.ipynb  data_loader.py
diagrams/: README.md  agentic-commerce.excalidraw  enrichment-pipeline.excalidraw  mcp-simple-agent.excalidraw
finance-genie/: ARCHITECTURE.md  KYC_DEMO.md  KYC_README.md  README.md  VIRTUAL_GRAPH.md  kyc.md  qs.md  response.md
finance-genie/data/: account_labels.csv  accounts.csv  customers.csv  ground_truth.json  merchants.csv
finance-genie/dbxcarta/: .env.sample  .gitignore  README.md  databricks.yml  dbxcarta-overlay.env  pyproject.toml  questions.json  setup_secrets.sh  uv.toml
finance-genie/dbxcarta/dbxcarta-dist/: dbxcarta_client-1.1.0-py3-none-any.whl  dbxcarta_core-1.1.0-py3-none-any.whl  dbxcarta_spark-1.1.0-py3-none-any.whl
finance-genie/dbxcarta/scripts/: refresh_dbxcarta_dist.sh  run_jobs.py  stage_wheelhouse.sh
finance-genie/dbxcarta/src/finance_genie_dbxcarta/: __init__.py  local_demo.py  preset.py
finance-genie/dbxcarta/tests/: test_local_demo.py  test_preset.py
finance-genie/docs/: VIRTUAL_GRAPH.md  basic-graph-examples.md  gds-guide.md  plain-cypher-examples-v2.md  plain-cypher-examples.md
finance-genie/docs/demo-guide/: genie-questions.md
finance-genie/docs/demo-guide/slides/: data-model.excalidraw  gold-data-model.excalidraw  package-lock.json  package.json  slides-15min.md  slides.md  talk.md
finance-genie/enrichment-pipeline/: README.md  pyproject.toml  run_existing_data_pipeline.py  upload_and_create_tables.sh
finance-genie/enrichment-pipeline/diagnostics/: verify_fraud_patterns.py
finance-genie/enrichment-pipeline/jobs/: 02_neo4j_ingest.py  03_pull_gold_tables.py  04_validate_gold_tables.py
finance-genie/enrichment-pipeline/setup/: checks_structural.py  generate_data.py  run_gds.py
finance-genie/enrichment-pipeline/sql/: gold_schema.sql  schema.sql
finance-genie/enrichment-pipeline/validation/: diagnose_similarity.py  run_gds.py  validate_neo4j_graph.py  verify_gds.py
finance-genie/graph-fraud-analyst/src/graph_fraud_analyst/backend/services/: loader.py
finance-genie/neo4j-mcp-demo/: pyproject.toml
finance-genie/virtual-graph-demo/: README.md  VIRTUAL_GRAPH.md  basic-graph-examples.md  best-practices.md  finding-fraud.md  findings-summary.md  gds-guide.md  gds-limitations.md  gds_pagerank.py  heavy_run.py  internal-only-findings.md  main.py  probe.py  pyproject.toml  queries.py  test-vg-next.md  virtual-graph.md  viz_check.py
finance-genie/virtual-graph-demo-v2/: README.md  capability_probe.py  demo-testplan.md  main.py  probe_results.jsonl  queries.py
finance-genie/virtual-graph-demo-v3/: README.md  gds_test.py  main.py  pushdown_probe.py  pyproject.toml  queries.py
finance-genie/virtual-graph-demo/src/: cli.py  connection.py  heavy_run.py  helpers.py  probe.py  queries.py  viz_check.py
finance-genie/virtual-graph-demo/src/demos/: __init__.py  basic.py  fraud.py  gds_common.py  gds_fast.py  gds_probe.py  gds_slow.py
finance-genie/workshop/: 00_setup_data.ipynb  01_required_setup.ipynb  02_genie_silver_questions.ipynb  03_neo4j_ingest.ipynb  04_gds_enrichment.ipynb  04_pull_gold_tables.ipynb  05_pull_gold_tables.ipynb  06_kyc_load.ipynb  06_kyc_walkthrough.ipynb  07_kyc_walkthrough.ipynb  07_train_model.ipynb  GENIE_SETUP.md  README.md  aura_gds_guide.md
mcp-demo-supplier-risk/: CLAUDE.md  GENIE.md
sql-semantics/: .env.sample  .gitignore  README.md  databricks.yml  pyproject.toml
sql-semantics/src/sql_semantics/: __init__.py  finance_genie.py  local_demo.py  upload_questions.py
sql-semantics/tests/: test_local_demo.py  test_preset.py
supplier-risk-graph/: .env.sample  CLAUDE.md  DATA_ARCHITECTURE.md  DEMO.md  GENIE.md  Makefile  README.md  RUNBOOK.md  expected_results.py  fix-gds.md  gds.py  generate_data.py  guard.py  load.py  outline.md  overview.md  pyproject.toml  suppliers.md  upload.py
supplier-risk-graph/data/: applies_to.csv  belongs_to.csv  business_rules.csv  business_terms.csv  business_units.csv  classified_as.csv  compliance_findings.csv  constrains.csv  customers.csv  data_sources.csv  defined_by.csv  edm_entities.csv  entities.csv  evaluates.csv  governs.csv  graph_metrics.csv  ground_truth.json  has_finding.csv  has_invoice.csv  invoices.csv  maps_to.csv  measure_defined_by.csv  measured_by.csv  measures.csv  owned_by.csv  payments.csv  policies.csv  realized_as.csv  recognizes.csv  revenue_entries.csv  rule_thresholds.csv  scored_by.csv  settled_by.csv  supplier_business_units.csv  suppliers.csv  supplies.csv  supply_relationships.csv  thresholds.csv
supplier-risk-graph/proposals/: CONTRACT.md  REBUILD.md  review-v2.md  simplified-plan.md
