[project]
name = "retail_agent"
version = "0.1.28"
description = "Databricks Agentic Commerce assistant with Neo4j knowledge graph, GraphRAG, and agent memory."
requires-python = ">=3.12"
dependencies = [
    "databricks-agents>=0.15.0",
    "databricks-job-runner>=0.5.1",
    "databricks-langchain>=0.15.0",
    "databricks-sdk>=0.40.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.8",
    "langgraph-prebuilt>=1.0.4",
    "mlflow>=3.1",
    "neo4j>=5.20.0",
    "neo4j-agent-memory==0.2.1",
    "neo4j-graphrag>=1.13.0",
    "nest-asyncio>=1.5.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
retail-agent-deploy = "retail_agent.deployment.deploy_agent:main"
retail-agent-load-products = "retail_agent.deployment.load_products:load_sample_data"
retail-agent-load-graphrag = "retail_agent.deployment.load_graphrag:main"
retail-agent-demo = "retail_agent.demos.demo_agent:check_endpoint"
retail-agent-demo-retrievers = "retail_agent.demos.demo_retrievers:demo_retrievers"
retail-agent-check-knowledge = "retail_agent.demos.check_knowledge:check_knowledge"
retail-agent-deploy-supervisor = "retail_agent.deployment.deploy_supervisor:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "checks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["retail_agent"]
