[project]
name = "supplier-risk-graph"
version = "0.1.0"
description = "Synthetic dataset generator and Neo4j loader for the supplier-risk-graph demo: an EDM knowledge layer plus instance data spanning Neo4j and the lakehouse."
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28",
    "python-dotenv>=1.1",
    "graphdatascience>=1.12",
    "pandas>=2.0",
    "databricks-sdk>=0.20",
]

[tool.uv]
package = false
