[project]
name = "finance-genie-dbxcarta"
version = "0.1.0"
description = "dbxcarta preset and config for the Finance Genie Lakehouse, consuming published dbxcarta from PyPI"
authors = [{ name = "Ryan Knight" }]
requires-python = ">=3.12"
dependencies = [
    "dbxcarta-core==1.1.0",
    "dbxcarta-spark==1.1.0",
    "dbxcarta-client[graph]==1.1.0",
    "databricks-sdk>=0.40",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
# Read-only local demo. Equivalent to:
#   uv run python -m finance_genie_dbxcarta.local_demo <subcommand>
finance-genie-dbxcarta-demo = "finance_genie_dbxcarta.local_demo:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

# No [tool.uv.sources]: dbxcarta is consumed as a normal versioned dependency,
# pinned above. This is the whole point of the published-library approach and
# the difference from sql-semantics, which pins editable local paths.
#
# While PyPI publishing is unavailable, a committed uv.toml beside this file
# supplies find-links to the vendored ./dbxcarta-dist wheels so the pinned
# versions resolve with no extra setup. When dbxcarta is published, delete
# uv.toml and ./dbxcarta-dist and the same pins resolve from PyPI unchanged.
# See dbxcarta/docs/reference/simulate-publish.md.

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: tests that require a live Databricks profile, Neo4j, and a previously-loaded catalog (default pytest skips these)",
]
