[project]
name = "finance-genie"
version = "0.1.0"
description = "Synthetic fraud dataset generator, verifier, and Databricks job runner for the finance-genie graph-enriched lakehouse demo."
requires-python = ">=3.12"
dependencies = [
    "databricks-job-runner>=0.4.8",
    "databricks-sdk>=0.108.0",
    "databricks-tools-core",
    "neo4j",
    "faker>=40.18.0",
    "graphdatascience>=1.12",
    "pandas",
    "python-dotenv",
    "rich",
]

[tool.uv]
package = false

[tool.uv.sources]
# databricks-tools-core ships the AgentBricksManager used by
# provision_genie_spaces.py for Genie Space / Data Room REST calls that the
# public Databricks SDK does not expose (table_identifiers, sample_questions,
# instructions). Not on PyPI — installed from the ai-dev-kit GitHub repo.
databricks-tools-core = { git = "https://github.com/databricks-solutions/ai-dev-kit", subdirectory = "databricks-tools-core" }
